<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/title_bar"
        layout="@layout/include_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/pwd_set_login_section"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <TextView
        android:id="@+id/tv_old_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/pwd_old_login"
        android:textColor="#333333"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_section_title" />

    <EditText
        android:id="@+id/et_old_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/pwd_input_old_login_hint"
        android:inputType="textPassword"
        android:maxLength="140"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_old_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_old_login_label" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/tv_old_login_label" />

    <TextView
        android:id="@+id/tv_new_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pwd_new_login"
        android:textColor="#333333"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <EditText
        android:id="@+id/et_new_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/pwd_input_new_login_hint"
        android:inputType="textPassword"
        android:maxLength="140"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_new_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_new_login_label" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/tv_new_login_label" />

    <TextView
        android:id="@+id/tv_confirm_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pwd_confirm_login"
        android:textColor="#333333"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <EditText
        android:id="@+id/et_confirm_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/pwd_input_confirm_login_hint"
        android:inputType="textPassword"
        android:maxLength="140"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_confirm_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_confirm_login_label" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_login_label" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_btn_red"
        android:text="@string/pwd_confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

</androidx.constraintlayout.widget.ConstraintLayout>
